# graceful-partition

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/common/: all-io.c  all-io.h  bitops.c  bitops.h  blkdev.c  blkdev.h  common.cmake  file-utils.c  file-utils.h  global.h  linux-version.c  linux-version.h  path-name.c  path-name.h  path.c  path.h  utils.c  utils.h
app/partitions/: partitions-mbr.c  partitions-mbr.h  partitions.c  partitions.cmake  partitions.h
demo/: CMakeLists.txt  demo-bitops.c  demo-blkdev.c  demo-file-utils.c  demo-linux-version.c  demo-list-device.c  demo-partition.c  demo-path.c
test/: CMakeLists.txt  test-path.cpp
