project (graceful-partition)
cmake_minimum_required (VERSION 3.5)

set (CMAKE_C_STANDARD 99)
set (CMAKE_VERBOSE_MAKEFILE OFF)
set (CMAKE_INCLUDE_CURRENT_DIR ON)
set (CMAKE_INCLUDE_CURRENT_DIR YES)
set (CMAKE_INCLUDE_DIRECTORIES_BEFORE ON)

set (CMAKE_PROJECT_VERSION_MAJOR 0)
set (CMAKE_PROJECT_VERSION_MINOR 0)
set (CMAKE_PROJECT_VERSION_PATCH 0)
set (CMAKE_PROJECT_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}")

ADD_DEFINITIONS (-Wall -g
        -D__STDC_WANT_LIB_EXT2__=1)

ENABLE_TESTING()
find_package(PkgConfig)

add_subdirectory(app)
add_subdirectory(demo)
add_subdirectory(test)